# termcs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/: run.py
src/termcs/: __init__.py  changeTable.py  termcs.css  termcs.py  worker.py
termcs/: __init__.py  bottomWidget.py  changeTable.py  cryptoTable.py  screener.py  screenerTable.py  termcs.css  termcs.py  topWidget.py  utils.py  worker.py
